# ccgd-platform

./: README.md
consent-management/: README.md  launch.sh
consent-management/src/: api.rs  encoders.rs  lib.rs  main.rs
nebula-consent-management/: Cargo.toml  README.md
nebula-consent-management/src/: config.rs  schema.rs  transactions.rs
secure-discovery/: README.md
secure-discovery/crypto-operations/deterministic re-encryption/: instructions.md
secure-discovery/crypto-operations/deterministic re-encryption/runfiles/: re-encryption-12servers.toml  re-encryption-3servers.toml  re-encryption-6servers.toml  re-encryption-9servers.toml
secure-discovery/crypto-operations/encryption/: instructions.md  instructions.txt
secure-discovery/experiments/patient-insert/: concept_dimension.sql  exec.sh  gen.sh  observation_fact.sql  sensitive_tagged.sql
secure-discovery/experiments/query-execution/: all_experiments.sh  docker-compose.yml  exp_leftover.sh  experiments_run.sh
secure-discovery/experiments/query-result/# query terms - 10 runs/: exp_query_terms_10.csv  exp_query_terms_100.csv  exp_query_terms_2.csv  exp_query_terms_25.csv  exp_query_terms_3.csv  exp_query_terms_4.csv  exp_query_terms_5.csv  exp_query_terms_50.csv
secure-discovery/experiments/query-result/# resulting patients - 10 runs/: exp_resulting_patients_1366.csv  exp_resulting_patients_150.csv  exp_resulting_patients_1511.csv  exp_resulting_patients_451.csv  exp_resulting_patients_52.csv  (+3 more)
secure-discovery/medco-deployment-profiles/compose-profiles/: docker-compose-definitions.yml
(+325 files in other folders)
