[package]
name = "neb-chain"
version = "0.1.0"
authors = ["Jared Gollhardt <jared@nebula.org>"]

[dependencies]
exonum = "0.9.0"
exonum-configuration = "0.9.0"
failure = "0.1.2"
lazy_static = "1.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.32"
toml = "0.4.6"

[dev-dependencies]
exonum-testkit = "0.9.0"
matches = "0.1.8"
